[package]
name = "node_swc"
version = "0.0.1"
authors = ["132"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc = "0.27.0"
swc_ecma_ast = "0.48.1"
swc_common = "0.10.21"
anyhow = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fxhash = "0.2"
wasm-bindgen = { version = "0.2.64", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.44"
console_error_panic_hook = "0.1.6"
sourcemap = "6.0.1"
once_cell = "1.3.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s"

[features]
default = ["wee_alloc"]
